# nlp-2026-winter

./: README.md  pyproject.toml
misc/clip/: clip_train.py  dataset.py  finetune.py  pretrain.py
misc/rl/: networks.py  ppo.py  reinforce.py  trpo.py
week01/: attention.py  gru.py  main.py  run_gru.sh  run_transformer.sh  run_transformer_tweak.sh
week01-imdb/: attention.py  gru.py  main.py  run_gru.sh  run_transformer.sh
week02-grokking/: analysis.ipynb  analysis.py  analysis_functions.py  main.py
week02-grokking/results/checkpoints/: modadd_seed1.pt  modadd_seed5.pt
week02-grokking/results/metrics/: seed_1.npz  seed_5.npz
week02-grokking/results/progress/: progress_seed5.npz
week02-grokking/results_wd0/checkpoints/: modadd_seed5.pt
week02-grokking/results_wd0/metrics/: seed_5.npz
week02-grokking/results_wd0/progress/: progress_seed5.npz
week03-clip/: install_coco.py  main.py
