[project]
name = "nlp-2026-winter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.5.0",
    "gymnasium[classic-control]>=1.2.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "open-clip-torch>=3.2.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "scipy>=1.17.0",
    "streamlit>=1.53.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "wandb>=0.23.1",
]
